tests/golden/external/external/external/01_keycloak_helmchart/keycloak/templates/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: http
    app.kubernetes.io/instance: external
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 17.0.1-legacy
    helm.sh/chart: keycloak-18.1.1
  name: keycloak-http
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: https
      port: 8443
      protocol: TCP
      targetPort: https
    - name: http-management
      port: 9990
      protocol: TCP
      targetPort: http-management
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
  type: ClusterIP
